force-app/main/default/objects/Annual_Sales_Plan__c/Annual_Sales_Plan__c.object-meta.xml
<CustomObject>
    <label>Annual Sales Plan</label>
    <nameField>
        <label>Annual Sales Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual Sales Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>