force-app/main/default/objects/Annual_Sales_Plan__c/fields/End_Of_Year__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Year__c</fullName>
    <label>End Of Year</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>