force-app/main/default/objects/Annual_Sales_Plan__c/fields/Enrollment_Actual__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Actual__c</fullName>
    <label>Enrollment Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>