force-app/main/default/objects/Annual_Sales_Plan__c/fields/In_Person_Meetings__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Meetings__c</fullName>
    <label>In-Person Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>