force-app/main/default/objects/Annual_Sales_Plan__c/fields/Initial_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Initial_Plan_Summary__c</fullName>
    <label>Initial Plan Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>