force-app/main/default/objects/Annual_Sales_Plan__c/fields/Key_Factors_Contributing_to_Success__c.field-meta.xml
<CustomField>
    <fullName>Key_Factors_Contributing_to_Success__c</fullName>
    <label>Key Factors Contributing to Success</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>