force-app/main/default/objects/Annual_Sales_Plan__c/fields/Mid_Year__c.field-meta.xml
<CustomField>
    <fullName>Mid_Year__c</fullName>
    <label>Mid Year</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>