force-app/main/default/objects/Annual_Sales_Plan__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <label>Narrative:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>