force-app/main/default/objects/Annual_Sales_Plan__c/fields/Obstacles_and_Quarterly_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Obstacles_and_Quarterly_Summaries__c</fullName>
    <label>Obstacles and Quarterly Summaries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>