force-app/main/default/objects/Annual_Sales_Plan__c/fields/Q2_Summary__c.field-meta.xml
<CustomField>
    <fullName>Q2_Summary__c</fullName>
    <label>Q2 Summary</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>