force-app/main/default/objects/Annual_Sales_Plan__c/fields/Q3_Summary_Obstacles__c.field-meta.xml
<CustomField>
    <fullName>Q3_Summary_Obstacles__c</fullName>
    <label>Q3 Summary</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>