force-app/main/default/objects/Annual_Sales_Plan__c/fields/Q3_Summary_Update__c.field-meta.xml
<CustomField>
    <fullName>Q3_Summary_Update__c</fullName>
    <label>Q3 Summary Update</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>