force-app/main/default/objects/Annual_Sales_Plan__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Sales_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>