force-app/main/default/objects/Annual_Sales_Plan__c/listViews/FY_17_Sales_Plans.listView-meta.xml
<ListView>
    <fullName>FY_17_Sales_Plans</fullName>
    <columns>NAME</columns>
    <columns>Regional_Manager__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>FY2017</value>
    </filters>
    <label>FY - 17 Sales Plans</label>
    <sharedTo>
        <group>BD_Management</group>
    </sharedTo>
</ListView>